html+css第一个提交

--- a/html+css/尺寸和大小单位.html
+++ b/html+css/尺寸和大小单位.html
@@ -5,8 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        div {
+            background: red;
+        }
+    </style>
 </head>
 <body>
-    这是第二个文件
+    <div>1111</div>
 </body>
 </html>
