11-27第一次提交

--- a/html+css/尺寸和大小单位/index.html
+++ b/html+css/尺寸和大小单位/index.html
@@ -7,15 +7,17 @@
     <title>Document</title>
     <style>
         * {
-            margin: 0;
             padding: 0;
+            margin: 0;
         }
-        div {
-            background: red;
+
+        .price {
+            text-decoration: line-through;
         }
     </style>
 </head>
 <body>
-    <div>1111</div>
+    <div>原价：<span class="price">999.00</span></div>
+    <div>现价：<span>99.00</span></div>
 </body>
 </html>
