--- a/html+css/css_code/display.html
+++ b/html+css/css_code/display.html
@@ -7,18 +7,22 @@
     <title>Document</title>
     <style>
         * {
-            padding: 0;
             margin: 0;
+            padding: 0;
         }
-
-        .price {
-            text-decoration: line-through;
+        div {
+            width: 100px;
+            height: 100px;
+            background: red;
+        }
+        div:hover {
+            display: none;
         }
     </style>
 </head>
 <body>
-    <div>原价：<span class="price">999.00</span></div>
-    
-    <div>现价：<span>99.00</span></div>
+    <div>
+        111
+    </div>
 </body>
 </html>
